# mlops-demo

./: .gitignore  README.md  manage-cloud.sh
.github/configs/: services-config.json
.github/workflows/: ml-service-cicd-on-push.yaml  params-on-call.yaml  service-ci-on-pull-request.yaml  service-cicd-on-call.yaml  webapp-ci-on-pull-request.yaml  webapp-cicd-on-call.yaml  webapp-cicd-on-push.yaml  webapp-params-on-call.yaml
analytics/iris/: README.md  requirements.txt
analytics/iris/scripts/: cli.py  data.py  fit_write_model.py  upload_file_to_gcs.py  upload_test_data_to_gcs.py  write_test_data.py
analytics/mnist/: README.md  modelo.py  pyproject.toml
infrastructure/gcp/: README.md  provision.sh  setup.sh
infrastructure/gcp/terraform/: .terraform.lock.hcl  .terraform.plan  artifact_registry.tf  iam.service_account.github_actions.tf  iam.workload_identity.github_actions.tf  main.tf  outputs.tf  storage.tf  terraform.tfvars.json  variables.tf
services/ml-iris/: .dockerignore  Dockerfile  README.md  openapi.json  requirements.txt
services/ml-iris/src/: app.py  config.py  entities.py  mlmodel_service.py
services/ml-iris/tests/: test_mlmodel_service.py  test_utils.py
services/ml-mnist/: Dockerfile  README.md  pyproject.toml
services/ml-mnist/src/: app.py  config.py  entities.py  mlmodel.py  utils.py
webapps/app-st/: Dockerfile  README.md  pyproject.toml
webapps/app-st/.streamlit/: config.toml
webapps/app-st/src/: app.py  config.py  entities.py  states.py
webapps/app-st/src/components/: mlmodels_selector.py
webapps/app-st/src/utils/: mlservices.py  (+1 more)
(+6 files in other folders)
